# cantor

./: .env.example  .gitignore  AGENTS.md  CURRENT_SPRINT.md  README.md  ROADMAP.md  SPEC-v1.MD  STATUS.md  Vision.md  compose.yaml  pyproject.toml
.canto/: policy.toml  repo.toml  workers.toml
.codex/: hooks.json
canto/: cli.py  config.py  seed-capabilities.yaml
docs/: Canto Delegated Executor Workspaces.md  Canto Memory Service Specification.md  adr-state-store.md  ai-worker-pool-architecture.md  ai-worker-pool.md  approval-unification.md  architecture-language-audit.md  architecture-language-cli-design.md  architecture-language-compatibility-audit.md  architecture-language-freeze.md  architecture-language-lexicon.md  architecture-language-sprint.md  auth-placeholder.md  canto-memory-service-implementation-plan.md  capability-installation.md  capability-manifest.md  capability-packaging.md  capability-scaffolding.md  cli-executor-callsites.md  codex-nested-agent-sandbox-hotfix.md  contract-compatibility.md  contract-freeze-audit.md  credential-vault.md  delegated-executor-scope-and-architecture.md  delegated-executor-ux-architecture.md  delegated-executors.md  graphify-maintenance.md  local-installation.md  local-model-catalog-reconciliation.md  local-ollama-worker-hotfix.md  memory-service.md  mvp-v1-scope-and-design.md  openapi.json  orchestration-api-contract.md  orchestration.md  provider-runtimes.md  registry-audit.md  registry-unification-plan.md  release-notes-mvp-v1.md  release-notes-v2.2.md  (+10 more)
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  graph.html  (+2 more)
(+216 files in other folders)
