[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canto-broker"
version = "0.1.0"
description = "A conservative WSL2-local orchestration broker for Echo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "python-dotenv>=1.0,<2",
  "pyyaml>=6.0,<7",
  "redis>=5.0,<7",
  "requests>=2.31,<3",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "fakeredis>=2.25,<3",
  "httpx>=0.27,<1",
  "pytest>=8.0,<9",
]

[project.scripts]
canto = "canto.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["canto"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

